<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="msg_default_status">请将镜头对准条码，距离手机10cm左右，软件将自动读取数据！</string>
    <string name="button_cancel">取消</string>
    <string name="app_name">爱踢球</string>
    <string name="user_agent">Android Phone/%1$s</string>
    <string name="pull_to_refresh_pull_label">下拉可以刷新</string>
    <string name="pull_to_refresh_release_label">松开可以刷新</string>
    <string name="pull_to_refresh_refreshing_label">正在刷新</string>
    <string name="retry">重试</string>
    <string name="loading_message_tip">正在处理，请稍候...</string>
    <string name="networkerror_message">抱歉，网络错误，请稍后重试！</string>
    <string name="web_client_error_message">抱歉，客户端错误，请稍后重试！</string>
    <string name="web_server_error_message">抱歉，服务端错误，请稍后重试！</string>
    <string name="json_error_message">抱歉，网络错误，请稍后重试！</string>
    <string name="web_io_error_message">抱歉，网络错误，请稍后重试！</string>
    <string name="alert_dialog_title">温馨提示</string>
    <string name="checkupdate_process_title">检查更新中...</string>

    <!-- bottom navigation bar -->
    <string name="navigation_bar_home">首页</string>
    <string name="navigation_bar_search">搜索</string>
    <string name="navigation_bar_category">分类</string>
    <string name="navigation_bar_cart">购物车</string>
    <string name="navigation_bar_more">帐户</string>
    <string name="errcode_success">分享成功</string>
    <string name="errcode_cancel">分享取消</string>
    <string name="errcode_deny">分享被拒绝</string>
    <string name="errcode_unknown">分享返回</string>

    <!-- 看台页面 -->
    <string name="rostrum">主席台</string>
    <string name="news">最新</string>
    <string name="best_heat">最热</string>
    <string name="look">看台</string>
    <string name="nearby">附近</string>

</resources>