<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/top_bar_bg"
        android:gravity="center_vertical"
        android:paddingRight="10dp" >

        <TextView
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:padding="5dp"
            android:text="@string/rostrum"
            android:textColor="#ffffff"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@id/button1"
            android:padding="5dp"
            android:text="@string/nearby"
            android:textColor="#ffffff"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@id/button2"
            android:padding="5dp"
            android:text="@string/news"
            android:textColor="#ffffff"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@id/button3"
            android:padding="5dp"
            android:text="@string/best_heat"
            android:textColor="#ffffff"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/stand_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="5dp"
            android:src="@drawable/ico_plus" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <include layout="@layout/frm_navigation_bar" />
    </LinearLayout>

</RelativeLayout>